--- a/app/build.gradle
+++ b/app/build.gradle
@@ -54,18 +54,28 @@ dependencies {
     implementation 'androidx.core:core-ktx:1.10.1'
     implementation 'androidx.lifecycle:lifecycle-runtime-ktx:2.6.1'
     implementation 'androidx.activity:activity-compose:1.7.2'
+    implementation("androidx.navigation:navigation-compose:2.5.3")
+
     implementation platform('androidx.compose:compose-bom:2022.10.00')
+
     implementation 'androidx.compose.ui:ui'
     implementation 'androidx.compose.ui:ui-graphics'
     implementation 'androidx.compose.ui:ui-tooling-preview'
     implementation 'androidx.compose.material3:material3'
 
+    implementation 'androidx.hilt:hilt-navigation:1.0.0'
+    implementation "com.google.dagger:hilt-android:2.45"
+    kapt "com.google.dagger:dagger-compiler:2.45"
+    kapt "com.google.dagger:hilt-android-compiler:2.45"
+    kapt "com.google.dagger:hilt-compiler:2.45"
+
     implementation 'androidx.room:room-common:2.5.1'
     implementation 'androidx.room:room-ktx:2.5.1'
+    kapt "androidx.room:room-compiler:2.5.0"
 
-    implementation "com.google.dagger:hilt-android:2.45"
-    kapt "com.google.dagger:dagger-compiler:2.45"         // https://github.com/google/dagger
-    kapt "com.google.dagger:hilt-android-compiler:2.45"   // https://dagger.dev/hilt/
+    implementation 'androidx.legacy:legacy-support-v4:1.0.0'
+    implementation 'androidx.lifecycle:lifecycle-livedata-ktx:2.6.1'
+    implementation 'androidx.lifecycle:lifecycle-viewmodel-ktx:2.6.1'
 
     implementation 'com.squareup.retrofit2:retrofit:2.9.0'
     implementation 'com.squareup.retrofit2:converter-gson:2.9.0'
