--- a/app/build.gradle
+++ b/app/build.gradle
@@ -52,9 +52,16 @@ android {
 dependencies {
 
     implementation 'androidx.core:core-ktx:1.10.1'
-    implementation 'androidx.lifecycle:lifecycle-runtime-ktx:2.6.1'
+    implementation 'androidx.lifecycle:lifecycle-runtime-ktx:2.6.2'
+    implementation 'androidx.lifecycle:lifecycle-runtime-compose:2.6.2'
+    implementation 'androidx.lifecycle:lifecycle-viewmodel-ktx:2.6.2'
+    implementation 'androidx.lifecycle:lifecycle-viewmodel-compose:2.6.2'
     implementation 'androidx.activity:activity-compose:1.7.2'
     implementation("androidx.navigation:navigation-compose:2.5.3")
+
+    implementation 'androidx.room:room-common:2.5.1'
+    implementation 'androidx.room:room-ktx:2.5.1'
+    kapt "androidx.room:room-compiler:2.5.0"
 
     implementation platform('androidx.compose:compose-bom:2022.10.00')
 
@@ -69,18 +76,16 @@ dependencies {
     kapt "com.google.dagger:hilt-android-compiler:2.45"
     kapt "com.google.dagger:hilt-compiler:2.45"
 
-    implementation 'androidx.room:room-common:2.5.1'
-    implementation 'androidx.room:room-ktx:2.5.1'
-    kapt "androidx.room:room-compiler:2.5.0"
-
     implementation("io.coil-kt:coil-compose:2.4.0")
 
     implementation 'androidx.legacy:legacy-support-v4:1.0.0'
-    implementation 'androidx.lifecycle:lifecycle-livedata-ktx:2.6.1'
-    implementation 'androidx.lifecycle:lifecycle-viewmodel-ktx:2.6.1'
+    implementation 'androidx.lifecycle:lifecycle-livedata-ktx:2.6.2'
+    implementation 'androidx.lifecycle:lifecycle-viewmodel-ktx:2.6.2'
 
     implementation 'com.squareup.retrofit2:retrofit:2.9.0'
     implementation 'com.squareup.retrofit2:converter-gson:2.9.0'
+
+    implementation("com.squareup.okhttp3:logging-interceptor:4.11.0")
 
     testImplementation 'junit:junit:4.13.2'
 
