--- a/app/build.gradle
+++ b/app/build.gradle
@@ -79,11 +79,18 @@ android {
 
 dependencies {
 
+    def composeVersion = '2.6.2'
+
     implementation 'androidx.core:core-ktx:1.10.1'
-    implementation 'androidx.lifecycle:lifecycle-runtime-ktx:2.6.2'
-    implementation 'androidx.lifecycle:lifecycle-runtime-compose:2.6.2'
-    implementation 'androidx.lifecycle:lifecycle-viewmodel-ktx:2.6.2'
-    implementation 'androidx.lifecycle:lifecycle-viewmodel-compose:2.6.2'
+
+    implementation "androidx.lifecycle:lifecycle-runtime-ktx:$composeVersion"
+    implementation "androidx.lifecycle:lifecycle-runtime-compose:$composeVersion"
+    implementation "androidx.lifecycle:lifecycle-viewmodel-ktx:$composeVersion"
+    implementation "androidx.lifecycle:lifecycle-viewmodel-compose:$composeVersion"
+    implementation "androidx.lifecycle:lifecycle-livedata-ktx:$composeVersion"
+
+    implementation("androidx.compose.runtime:runtime-livedata:1.5.4")
+
     implementation 'androidx.activity:activity-compose:1.7.2'
     implementation("androidx.navigation:navigation-compose:2.5.3")
 
@@ -107,8 +114,6 @@ dependencies {
     implementation("io.coil-kt:coil-compose:2.4.0")
 
     implementation 'androidx.legacy:legacy-support-v4:1.0.0'
-    implementation 'androidx.lifecycle:lifecycle-livedata-ktx:2.6.2'
-    implementation 'androidx.lifecycle:lifecycle-viewmodel-ktx:2.6.2'
 
     implementation 'com.squareup.retrofit2:retrofit:2.9.0'
     implementation 'com.squareup.retrofit2:converter-gson:2.9.0'
