--- a/app/build.gradle
+++ b/app/build.gradle
@@ -7,7 +7,7 @@ plugins {
 
 android {
     namespace 'com.example.androidbasetemplate'
-    compileSdk 33
+    compileSdk 34
 
     defaultConfig {
         applicationId "com.example.androidbasetemplate"
@@ -81,7 +81,7 @@ dependencies {
 
     def composeVersion = '2.6.2'
 
-    implementation 'androidx.core:core-ktx:1.10.1'
+    implementation 'androidx.core:core-ktx:1.12.0'
 
     implementation "androidx.lifecycle:lifecycle-runtime-ktx:$composeVersion"
     implementation "androidx.lifecycle:lifecycle-runtime-compose:$composeVersion"
@@ -91,12 +91,12 @@ dependencies {
 
     implementation("androidx.compose.runtime:runtime-livedata:1.5.4")
 
-    implementation 'androidx.activity:activity-compose:1.7.2'
-    implementation("androidx.navigation:navigation-compose:2.5.3")
+    implementation 'androidx.activity:activity-compose:1.8.0'
+    implementation("androidx.navigation:navigation-compose:2.7.5")
 
-    implementation 'androidx.room:room-common:2.5.1'
-    implementation 'androidx.room:room-ktx:2.5.1'
-    kapt "androidx.room:room-compiler:2.5.0"
+    implementation 'androidx.room:room-common:2.6.0'
+    implementation 'androidx.room:room-ktx:2.6.0'
+    kapt "androidx.room:room-compiler:2.6.0"
 
     implementation platform('androidx.compose:compose-bom:2022.10.00')
 
@@ -104,14 +104,15 @@ dependencies {
     implementation 'androidx.compose.ui:ui-graphics'
     implementation 'androidx.compose.ui:ui-tooling-preview'
     implementation 'androidx.compose.material3:material3'
+    implementation "androidx.compose.material:material-icons-extended:1.5.4"
 
-    implementation 'androidx.hilt:hilt-navigation:1.0.0'
+    implementation 'androidx.hilt:hilt-navigation:1.1.0'
     implementation "com.google.dagger:hilt-android:2.45"
     kapt "com.google.dagger:dagger-compiler:2.45"
     kapt "com.google.dagger:hilt-android-compiler:2.45"
     kapt "com.google.dagger:hilt-compiler:2.45"
 
-    implementation("io.coil-kt:coil-compose:2.4.0")
+    implementation("io.coil-kt:coil-compose:2.5.0")
 
     implementation 'androidx.legacy:legacy-support-v4:1.0.0'
 
