--- a/app/build.gradle
+++ b/app/build.gradle
@@ -104,7 +104,8 @@ dependencies {
     implementation 'androidx.compose.ui:ui-graphics'
     implementation 'androidx.compose.ui:ui-tooling-preview'
     implementation 'androidx.compose.material3:material3'
-    implementation "androidx.compose.material:material-icons-extended:1.5.4"
+    implementation "androidx.compose.material:material-icons-extended:1.6.5"
+    implementation("androidx.compose.animation:animation:1.7.0-SNAPSHOT")
 
     implementation 'androidx.hilt:hilt-navigation:1.1.0'
     implementation "com.google.dagger:hilt-android:2.45"
