--- a/settings.gradle
+++ b/settings.gradle
@@ -10,6 +10,11 @@ dependencyResolutionManagement {
     repositories {
         google()
         mavenCentral()
+
+        // Animation requirements
+        maven { url = uri("https://androidx.dev/snapshots/builds/11670047/artifacts/repository/") }
+        maven { url = "https://plugins.gradle.org/m2/" }
+        maven { url = "https://maven.pkg.jetbrains.space/public/p/compose/dev" }
     }
 }
 rootProject.name = "AndroidBaseTemplate"
