--- a/app/build.gradle
+++ b/app/build.gradle
@@ -124,6 +124,8 @@ dependencies {
 
     implementation 'androidx.palette:palette-ktx:1.0.0'
 
+    implementation("androidx.datastore:datastore-preferences:1.1.1")
+    
     testImplementation 'junit:junit:4.13.2'
 
     androidTestImplementation 'androidx.test.ext:junit:1.1.5'
