feat(pokemon-list): refactor list to detail shared transition animation

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -3,6 +3,8 @@ plugins {
     id 'org.jetbrains.kotlin.android'
     id 'kotlin-kapt'
     id 'dagger.hilt.android.plugin'
+    id 'org.jetbrains.kotlin.plugin.serialization'
+    id 'kotlin-parcelize'
 }
 
 android {
@@ -20,6 +22,12 @@ android {
         vectorDrawables {
             useSupportLibrary true
         }
+
+        javaCompileOptions {
+            annotationProcessorOptions {
+                arguments += ["room.schemaLocation": "$projectDir/schemas".toString()]
+            }
+        }
     }
 
     buildTypes {
@@ -28,6 +36,7 @@ android {
             proguardFiles getDefaultProguardFile('proguard-android-optimize.txt'), 'proguard-rules.pro'
         }
     }
+
     compileOptions {
         sourceCompatibility JavaVersion.VERSION_17
         targetCompatibility JavaVersion.VERSION_17
@@ -35,6 +44,7 @@ android {
 
     kotlinOptions {
         jvmTarget = JavaVersion.VERSION_17
+        freeCompilerArgs = ["-Xcontext-receivers"]
     }
 
     flavorDimensions "environment"
@@ -67,9 +77,11 @@ android {
         compose true
         buildConfig = true
     }
+
     composeOptions {
-        kotlinCompilerExtensionVersion = "1.4.3"
+        kotlinCompilerExtensionVersion = "1.5.3"
     }
+
     packagingOptions {
         resources {
             excludes += '/META-INF/{AL2.0,LGPL2.1}'
@@ -79,7 +91,7 @@ android {
 
 dependencies {
 
-    def composeVersion = '2.6.2'
+    def composeVersion = '2.7.0'
 
     implementation 'androidx.core:core-ktx:1.12.0'
 
@@ -92,26 +104,29 @@ dependencies {
     implementation("androidx.compose.runtime:runtime-livedata:1.5.4")
 
     implementation 'androidx.activity:activity-compose:1.8.0'
-    implementation("androidx.navigation:navigation-compose:2.7.5")
+    implementation("androidx.navigation:navigation-compose:2.7.7")
 
-    implementation 'androidx.room:room-common:2.6.0'
-    implementation 'androidx.room:room-ktx:2.6.0'
-    kapt "androidx.room:room-compiler:2.6.0"
+    implementation 'androidx.room:room-common:2.6.1'
+    implementation 'androidx.room:room-ktx:2.6.1'
+    kapt "androidx.room:room-compiler:2.6.1"
 
-    implementation platform('androidx.compose:compose-bom:2022.10.00')
 
     implementation 'androidx.compose.ui:ui'
     implementation 'androidx.compose.ui:ui-graphics'
     implementation 'androidx.compose.ui:ui-tooling-preview'
     implementation 'androidx.compose.material3:material3'
+    implementation "androidx.compose.material:material:1.6.7"
     implementation "androidx.compose.material:material-icons-extended:1.6.5"
     implementation("androidx.compose.animation:animation:1.7.0-SNAPSHOT")
 
-    implementation 'androidx.hilt:hilt-navigation:1.1.0'
-    implementation "com.google.dagger:hilt-android:2.45"
-    kapt "com.google.dagger:dagger-compiler:2.45"
-    kapt "com.google.dagger:hilt-android-compiler:2.45"
-    kapt "com.google.dagger:hilt-compiler:2.45"
+    implementation 'androidx.hilt:hilt-navigation:1.2.0'
+    implementation "com.google.dagger:hilt-android:2.51.1"
+    implementation 'androidx.hilt:hilt-navigation-compose:1.2.0'
+    kapt "com.google.dagger:dagger-compiler:2.51.1"
+    kapt "com.google.dagger:hilt-android-compiler:2.51"
+    kapt "com.google.dagger:hilt-compiler:2.51.1"
+
+    implementation("org.jetbrains.kotlinx:kotlinx-serialization-json:1.6.3")
 
     implementation("io.coil-kt:coil-compose:2.5.0")
 
@@ -125,13 +140,15 @@ dependencies {
     implementation 'androidx.palette:palette-ktx:1.0.0'
 
     implementation("androidx.datastore:datastore-preferences:1.1.1")
-    
+
     testImplementation 'junit:junit:4.13.2'
 
     androidTestImplementation 'androidx.test.ext:junit:1.1.5'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.5.1'
     androidTestImplementation platform('androidx.compose:compose-bom:2022.10.00')
     androidTestImplementation 'androidx.compose.ui:ui-test-junit4'
+
+    implementation platform('androidx.compose:compose-bom:2022.10.00')
 
     debugImplementation 'androidx.compose.ui:ui-tooling'
     debugImplementation 'androidx.compose.ui:ui-test-manifest'
