--- a/app/build.gradle
+++ b/app/build.gradle
@@ -23,11 +23,11 @@ android {
             useSupportLibrary true
         }
 
-        javaCompileOptions {
+        /*javaCompileOptions {
             annotationProcessorOptions {
                 arguments += ["room.schemaLocation": "$projectDir/schemas".toString()]
             }
-        }
+        }*/
     }
 
     buildTypes {
