--- a/app/build.gradle
+++ b/app/build.gradle
@@ -114,9 +114,9 @@ dependencies {
     implementation 'androidx.compose.ui:ui'
     implementation 'androidx.compose.ui:ui-graphics'
     implementation 'androidx.compose.ui:ui-tooling-preview'
-    implementation 'androidx.compose.material3:material3'
     implementation "androidx.compose.material:material:1.6.7"
-    implementation "androidx.compose.material:material-icons-extended:1.6.5"
+    implementation "androidx.compose.material:material-icons-extended:1.6.7"
+    implementation 'androidx.compose.material3:material3-android:1.2.1'
     implementation("androidx.compose.animation:animation:1.7.0-SNAPSHOT")
 
     implementation 'androidx.hilt:hilt-navigation:1.2.0'
