feat(i18n): create selector to set app language

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -113,6 +113,7 @@ dependencies {
 
     // di
     implementation(libs.hilt.android)
+    implementation libs.androidx.appcompat
     ksp(libs.dagger.compiler)
     ksp(libs.hilt.android.compiler)
     ksp(libs.hilt.compiler)
