feat(i18n): refactor selector logic code

--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -9,7 +9,7 @@ androidxLifecycle = "2.7.0"
 androidxComposeNavigation = "2.7.7"
 androidxRoom = "2.6.1"
 androidxCompose = "1.6.5"
-androidxComposeSnapshot = "1.7.0-SNAPSHOT"
+androidxComposeSnapshot = "1.7.0-beta04"
 androidxComposeMaterial3 = "1.2.1"
 androidxHiltNavigationCompose = "1.2.0"
 hilt = "2.51.1"
