--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -1,14 +1,12 @@
 [versions]
-agp = "8.2.0-rc01"
-targetSdk = "34"
-jvmTarget = "17"
+agp = "8.2.2"
 kotlin = "1.9.23"
 ksp = "1.9.23-1.0.20"
 
-androidxLifecycle = "2.7.0"
+androidxLifecycle = "2.8.4"
 androidxComposeNavigation = "2.7.7"
 androidxRoom = "2.6.1"
-androidxCompose = "1.6.5"
+androidxCompose = "1.6.8"
 androidxComposeSnapshot = "1.7.0-beta04"
 androidxComposeMaterial3 = "1.2.1"
 androidxHiltNavigationCompose = "1.2.0"
@@ -20,14 +18,14 @@ okHttp = "4.12.0"
 palette = "1.0.0"
 datastore = "1.1.1"
 junit = "4.13.2"
-androidxTest = "1.5.0"
-androidxTestJunit = "1.1.5"
+androidxTest = "1.6.1"
+androidxTestJunit = "1.2.1"
 mockito = "5.11.0"
 mockito-kotlin = "5.2.1"
 androidxComposeConstraintLayout = "1.0.1"
 appcompat = "1.7.0"
-activity = "1.9.0"
-androidxPaging = "3.3.0"
+activity = "1.9.1"
+androidxPaging = "3.3.2"
 accompanist = "0.27.0"
 
 [libraries]
