--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -4,10 +4,10 @@ kotlin = "1.9.23"
 ksp = "1.9.23-1.0.20"
 
 androidxLifecycle = "2.8.4"
-androidxComposeNavigation = "2.7.7"
+androidxComposeNavigation = "2.8.0-rc01"
 androidxRoom = "2.6.1"
 androidxCompose = "1.6.8"
-androidxComposeSnapshot = "1.7.0-beta04"
+androidxComposeSnapshot = "1.7.0-rc01"
 androidxComposeMaterial3 = "1.2.1"
 androidxHiltNavigationCompose = "1.2.0"
 hilt = "2.51.1"
